# hyperfolio

./: .gitignore  README.md
baton/: Cargo.toml  Dockerfile  instructions.txt
baton/dashboard/: package.json
baton/dashboard/src/: index.js
baton/dashboard/src/views/reports/DashboardView/: index.js
baton/frontend/src/layouts/DashboardLayout/NavBar/: index.js
baton/frontend/src/views/product/ProductListView/: index.js
baton/react/: asset-manifest.json  index.html  precache-manifest.9469179b05b2fe6b48eafcbaf7b75032.js  service-worker.js
baton/react/static/js/: 2.d1e2abf3.chunk.js  2.d1e2abf3.chunk.js.map  main.e70e5055.chunk.js  main.e70e5055.chunk.js.map
baton/src/: main (copy).rs  main.rs
baton/src/teste/: index.html
baton/templates/: index.html
crawler/: htmlCrawler.py  run.py  run.sh
pixelorama/: cors-server.py  index.html  run.sh
reactNative/: App (copy).js  App.js  package.json
reactNative/components/: Flat-List.js  List.js
