[package]
name = "baton"
version = "0.1.0"
authors = ["Paulo Jorge PM <paulo.jorge.pm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
actix-files = "0.5.0"
tera = "1.6.1"
